--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>My Portfolio | Haekal Khadafy</title>
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- Box Icons -->
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- css aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -18,13 +18,13 @@
             <h1>HAEKAL</h1>
         </div>
         <div id="menu-icon" class="menu-icon">
-            <i class='bx bx-menu'></i>
+            <i class="fa-solid fa-bars"></i>
         </div>
         <ul id="menu-list" class="hidden">
             <li><a href="#home" class="active">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#prestasi">Prestasi</a></li>
+            <li><a href="#achievement">Achievement</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -40,10 +40,10 @@
             <h1>HAEKAL KHADAFY</h1>
             <h4>And I'm <span>Mahasiswa</span></h4>
             <div class="social-media">
-                <a href="https://github.com/haekal3/itw2023_233040116/tree/942469715ad9494532ef8eb0d598a031b251447e/kuliah"><i class='bx bxl-github'></i></a>
-                <a href="https://x.com/khadafyyy_"><i class='bx bxl-twitter'></i></a>
-                <a href="https://instagram.com/khadafyyy_"><i class='bx bxl-instagram-alt'></i></a>
-                <a href="https://www.linkedin.com/in/haekal-khadafy-150982297"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/haekal3/itw2023_233040116/tree/942469715ad9494532ef8eb0d598a031b251447e/kuliah"><i class="fa-brands fa-github"></i></i></a>
+                <a href="https://x.com/khadafyyy_"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://instagram.com/khadafyyy_"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/haekal-khadafy-150982297"><i class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
         <div class="home-img2">
@@ -59,7 +59,7 @@
             <img src="img/about.jpg" alt="about">
         </div>
         <div class="about-content">
-        <p>Saya adalah Mahasiswa Universitas Pasundan Jurusan Teknik Informatika tahun 2023, dan sekarang baru tahap semester satu. Saya memiliki cita-cita sebagai Programmer yang handal. Tentunya dibutuhkan tekad dan usaha yang keras untuk mewujudkannya.</p>
+        <p>INTRODUCING MY NAME IS HAEKAL KHADAFY I WAS BORN IN KUNINGAN ON FEBRUARY 21 2005. I HAVE A SPORTS HOBBY IN THE FIELD OF FUTSAL AND FOOTBALL. I AM A STUDENT OF PASUNDAN UNIVERSITY, DEPARTMENT OF INFORMATICS ENGINEERING IN 2023. I HAVE ASSIGNMENTS OF BEING A PROGRAMMER.</p>
         </div>
     </section>
     <!-- about-end -->
@@ -69,74 +69,72 @@
         <h2>MY <span>SKILLS</span></h2>
     <div class="skills-content">
         <div class="skills-box" data-aos="flip-left" data-aos-duration="400">
-            <i class='bx bxl-html5'></i>
+            <i class="fa-brands fa-html5"></i>
             <h3>HTML</h3>
         </div>
         <div class="skills-box" data-aos="flip-left" data-aos-duration="800">
-            <i class='bx bxl-css3'></i>
+            <i class="fa-brands fa-css3-alt"></i>
             <h3>CSS</h3>
         </div>
         <div class="skills-box" data-aos="flip-left" data-aos-duration="1200">
-            <i class='bx bxs-paint'></i>
-            <h3>DESIGN</h3>
+            <i class="fa-brands fa-js"></i>
+            <h3>JS</h3>
         </div>
     </div>
     </section>
     <!-- skills-end -->
 
-    <!-- prestasi -->
-    <section class="prestasi" id="prestasi">
-        <h2>PRESTASI</h2>
-        <div class="prestasi-column">
-            <div class="prestasi-box">
-                <div class="prestasi-content">
-                    <div class="content">
-                        <div class="year"> <i class='bx bxs-calendar'></i> Februari 2023 </div>
-                        <h3>Juara 3 Futsal Umum Se-kabupaten</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos consequatur nobis possimus labore exercitationem! Rem quia voluptates quos maiores numquam.</p>
-                    </div>
+    <!-- achievement -->
+    <section class="achievement" id="achievement">
+        <h2>ACHIEVEMENT</h2>
+            <div class="content">
+                <div class="card" data-aos="fade-right" data-aos-duration="1000">
+                    <img src="img/Juara1.jpg" alt="">
+                    <h2>Juara 3</h2>
+                    <h4>Liga Soeratin Usia 18</h4>
                 </div>
-                <div class="prestasi-content">
-                    <div class="content">
-                        <div class="year"> <i class='bx bxs-calendar'></i> September 2020 </div>
-                        <h3>Juara 3 Mini Soccer usia 15 tahun</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos consequatur nobis possimus labore exercitationem! Rem quia voluptates quos maiores numquam.</p>
-                    </div>
+                <div class="card" data-aos="fade-down" data-aos-duration="1000">
+                    <img src="img/juara3.jpg" alt="">
+                    <h2>Juara 3</h2>
+                    <h4>Liga Foundation 2023</h4>
                 </div>
-                <div class="prestasi-content">
-                    <div class="content">
-                        <div class="year"> <i class='bx bxs-calendar'></i> Agustus 2023 </div>
-                        <h3>Juara 2 Liga Askab Usia 18 tahun</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos consequatur nobis possimus labore exercitationem! Rem quia voluptates quos maiores numquam.</p>
-                    </div>
-                </div>
+                <div class="card" data-aos="fade-left" data-aos-duration="1000">
+                    <img src="img/juara2.jpg" alt="">
+                    <h2>Juara 3</h2>
+                    <h4>Hikmat Fest Mini Soccer</h4>
                 </div>
             </div>
     </section>
-    <!-- prestasi-end -->
+    <!-- achievement-end -->
 
     <!-- contact -->
     <section class="contact" id="contact">
         <h2>CONTACT <span>ME!</span></h2>
-        <form action="#" name="contact-form">
-            <div class="input-box">
-                <input type="text" placeholder="Nama" name="nama">
-                <input type="text" placeholder="No. Telepon" name="telepon">
-                <input type="Email" placeholder="Email" name="email">
+        <div class="contact-container">
+            <div class="contact-info">
+                <div><i class="fa-solid fa-location-dot"></i>Jl. Raya Caracas No.01</div>
+                <div><i class="fa-solid fa-envelope"></i>haekalkhadafi21@gmail.com</div>
+                <div><i class="fa-solid fa-phone"></i>+62 896 3734 6465</div>
             </div>
-            <textarea cols="30" rows="10" placeholder="Pesan" name="pesan"></textarea>
-            <button type="submit">Kirim</button>
-        </form>
+            <div class="contact-form" name="contact-form">
+                <form name="contact-form">
+                    <input type="text" class="text-box" placeholder="Nama" name="nama">
+                    <input type="text" class="text-box" placeholder="No. Telepon" name="telepon">
+                    <textarea rows="5" placeholder="Pesan" name="pesan"></textarea>
+                    <button type="submit" name="submit">Kirim</button>
+                </form>
+            </div>
+        </div>
     </section>
     <!-- contact-end -->
 
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 by <span>Haekal Khadafy</span> | All Rights Reserved.</p>
+            <p>Copyright <i class="fa-regular fa-copyright"></i> 2023 by Haekal Khadafy</p>
         </div>
         <div class="footer-icon">
-            <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+            <a href="#home"><i class="fa-solid fa-arrow-up"></i></a>
         </div>
     </footer>
     <!-- Footer-end -->
