--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div><i class="fa-solid fa-envelope"></i>haekalkhadafi21@gmail.com</div>
                 <div><i class="fa-solid fa-phone"></i>+62 896 3734 6465</div>
             </div>
-            <div class="contact-form" name="contact-form">
+            <div class="contact-form">
                 <form name="contact-form">
                     <input type="text" class="text-box" placeholder="Nama" name="nama">
                     <input type="text" class="text-box" placeholder="No. Telepon" name="telepon">
